test/technotes/doc-examples/AttributeInvalidPlacement.good
AttributeInvalidPlacement.chpl:8: syntax error: near 'pragma'
