test/technotes/doc-examples/AttributeInvalidPlacement.chpl
//
// THIS TEST CASE IS AUTO-INCLUDED IN THE DOCUMENTATION
//

/* START_EXAMPLE_0 */
// invalid placement of @chpldoc.nodoc
@chpldoc.nodoc
pragma "always RVF"
proc foo() { }
/* STOP_EXAMPLE_0 */

